# ripen

./: CMakeLists.txt  README.md  Untitled-2.nb  main.cpp  mdsimulate
head/: .newton.h.swp  .particle.h.swp  myrandom.h  newton.h  particle.h
src/: .newton.cpp.swp  fire.cpp  newton.cpp  particle.cpp
